# spatialmath-python

./: pyproject.toml
docs/source/: conf.py
notebooks/: gentle-introduction.ipynb  introduction.ipynb
spatialmath/: DualQuaternion.py  __init__.py  baseposelist.py  baseposematrix.py  geom2d.py  geom3d.py  pose3d.py  quaternion.py  spatialvector.py  spline.py  timing.py  twist.py
spatialmath/base/: __init__.py  _types_35.py  animate.py  argcheck.py  base.ipynb  graphics.py  numeric.py  quaternions.py  symbolic.py  transforms2d.py  transforms3d.py  transformsNd.py  types.py  vectors.py
symbolic/: angvelxform.ipynb  angvelxform_dot.ipynb
tests/: test_dualquaternion.py  test_geom2d.py  test_geom3d.py  test_pose2d.py  test_pose3d.py  test_quaternion.py  test_spatialvector.py  test_spline.py  test_twist.py
tests/base/: test_argcheck.py  test_graphics.py  test_numeric.py  test_quaternions.py  test_symbolic.py  test_transforms.py  test_transforms2d.py  test_transforms3d.py  test_transforms3d_plot.py  test_transformsNd.py  test_vectors.py  test_velocity.py
