[tool.poetry]
name = "spatialmath-python"
package-mode = true
version = "1.1.13"
description = "Provides spatial maths capability for Python."
authors = ["Peter Corke <rvc@petercorke.com>"]
readme = "README.md"
packages = [
    { include = "spatialmath" },
    # { include = "spatialmath.base" },
]
homepage = "https://github.com/bdaiinstitute/spatialmath-python"
repository = "https://github.com/bdaiinstitute/spatialmath-python"
documentation = "https://bdaiinstitute.github.io/spatialmath-python/"
keywords = [
    "spatial-math", "spatial math",
    "SO2", "SE2", "SO3", "SE3",
    "SO(2)", "SE(2)", "SO(3)", "SE(3)",
    "twist", "product of exponential", "translation", "orientation",
    "angle-axis", "Lie group", "skew symmetric matrix",
    "pose", "translation", "rotation matrix", 
    "rigid body transform", "homogeneous transformation",
    "Euler angles", "roll-pitch-yaw angles",
    "quaternion", "unit-quaternion",
    "robotics", "robot vision", "computer vision",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=2.1.0"
scipy = "*"
matplotlib = ">=3.9.3"
ansitable = "*"
typing_extensions = "*"
pre-commit = "*"
sympy = "^1.13.3"

[tool.poetry.group.dev.dependencies]
sympy = "*"
pytest = "*"
pytest-timeout = "*"
pytest-xvfb = "*"
coverage = "*"
build = "*"
ruff = "*"

[tool.poetry.group.docs.dependencies]
sphinx = "*"
sphinx-rtd-theme = "*"
sphinx-autorun = "*"
sphinxcontrib-jsmath = "*"
sphinx-favicon = "*"
sphinx-autodoc-typehints = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py38"
exclude = ["camera_derivatives.py", "**/*.ipynb"]

[tool.ruff.lint]
ignore = ["E741", "E731"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
